# annotation

./: labels.json  pyproject.toml  requirements.txt  ✍️ 1. First Part.py  ✍️_1._First_Part.py
.devcontainer/: devcontainer.json
annotations/: Castaldo.A-0  part_1.json
pages/: ✏️ 2. Second Part.py  ✏️ 3. Third Part.py  ✏️ 4. Fourth Part.py  ✏️ 5. Fifth Part.py  ✏️ 5. Submit.py
